tests/language_modules/06_arrays/invalid_semantics/unknown_array_element_type.vf
module UnknownArrayElementType

procedure main()
is
    let values: Array<MissingType, 2> = []
    check true
end main

end UnknownArrayElementType